# Rewild

./: .gitignore  LICENSE  README.md  REWILD_DevDash_2026_Project_Plan.md
.gsd/: DECISIONS.md  JOURNAL.md  ROADMAP.md  SPEC.md  STATE.md  TODO.md
.gsd/phases/1/: 1-PLAN.md  2-PLAN.md  3-PLAN.md  RESEARCH.md
.gsd/phases/2/: 1-PLAN.md  2-PLAN.md
backend/: README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/data/: __init__.py  ecoregions.py  interventions.py  native_plants.py  pollinators.py  usda_zones.py
backend/app/engine/: __init__.py  action_plan.py  bloom_calendar.py  claude_reasoner.py  interactions.py  succession.py  uncertainty.py
backend/app/routes/: __init__.py  lookup.py  simulate.py
backend/tests/: math_impact_succession.py  test_action_plan.py  test_api_routes.py  test_bloom_calendar.py  test_ecology_outputs.py  test_interactions.py  test_native_plants.py  test_succession.py  test_usda_zones.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: ActionPlan.jsx  App.css  App.jsx  ConfidencePanel.jsx  Dashboard.jsx  FoodWebGraph.jsx  InterventionPanel.jsx  SiteProfileWizard.jsx  TrajectoryChart.jsx  index.css
frontend/src/test/: ActionPlan.test.jsx  Dashboard.test.jsx  InterventionPanel.test.jsx
